fixed width of logo to be more precise, should be better on mobile

--- a/static/stylesheets/style.scss
+++ b/static/stylesheets/style.scss
@@ -31,7 +31,7 @@ body{
   }
   #logo{
     margin: 15px auto;
-    width: 400px;
+    width: 204px;
     text-align: center;
   }
   #color-top{
